--- a/src/HomePage/buyForm.css
+++ b/src/HomePage/buyForm.css
@@ -68,12 +68,16 @@
 .max-mint-style {
   font-weight: bold;
   margin: 0px;
+  font-family: 'Cinzel';
+
 }
 
 .input-display-sellform label {
   display: flex;
   flex-direction: row;
   align-items: center;
+  font-family: 'Cinzel';
+
 }
 .input-field-sellfrom-inner {
   /* margin-top: 4%; */
@@ -107,6 +111,8 @@
 }
 .wallet-button-background h4 {
   padding-top: 6px;
+  font-family: 'Cinzel';
+
 }
 .tax-fee-flex {
   display: flex;
@@ -145,6 +151,8 @@
   padding: 6px 18px;
   width: 100%;
   border-radius: 13px;
+  font-family: 'Cinzel';
+
   color: white;
   box-shadow: 5px 5px 5px 5px rgb(0 0 0 / 10%);
   background: #58acff;
@@ -165,8 +173,9 @@
   padding-bottom: 20px;
 }
 
-.sell-main-heading h3 {
+.sell-main-heading p {
   color: white;
+  font-family: Cinzel;
 }
 .modal-content-style {
   position: absolute;
@@ -192,6 +201,8 @@
 .buy-sell-flex {
   display: flex;
   /* flex-direction: row */
+  font-family: 'Cinzel';
+
 }
 .buy-sell-button-inner:focus {
   background: #58acff;
@@ -201,6 +212,10 @@
 .badge {
   background-color: rgb(124, 45, 45);
     margin-top: 6px;
+}
+.form-head-style{
+  font-family: 'Cinzel';
+
 }
 /* .badge-danger {
   background-color: rgb(124, 45, 45);
@@ -216,6 +231,8 @@
     border-radius: 12px;
     color: white;
     background: #58acff;
+    font-family: 'Cinzel';
+
     border: none;
   }
   .buy-card-body-flex {
