--- a/src/HomePage/walletModal.css
+++ b/src/HomePage/walletModal.css
@@ -11,6 +11,9 @@
 .wallet-heading-style {
   text-align: center;
   color: white;
+  font-family: "Cinzel";
+  padding-top: 20px !important;
+
   padding: 12px;
 }
 .wallet-button-style-inner {
@@ -39,8 +42,8 @@
   /* margin-right: 3px; */
   margin-top: 14px;
 }
-.wallet-button-background{ 
-   background-color: #393469;
+.wallet-button-background {
+  background-color: #393469;
   padding: 4px 20px;
   border-radius: 14px;
   margin-bottom: 12px;
@@ -51,9 +54,9 @@
   justify-content: space-between;
   align-items: center;
 }
-.wallet-modal-border{
+.wallet-modal-border {
   border-radius: 26px;
 }
-.modal-outer-style{
+.modal-outer-style {
   padding: 0px !important;
 }
