--- a/src/HomePage/buyForm.css
+++ b/src/HomePage/buyForm.css
@@ -240,7 +240,16 @@
   text-align: center;
   /* position:absolute; */
 }
-
+.toast-successMesage-style {
+  position: absolute;
+  background-color: #393469;
+  height: 10%;
+  width: 30%;
+  align-items: center;
+  padding: 12px;
+  color: white;
+  border-radius: 12px;
+}
 @media screen and (max-width: 900px) {
   .swap-button-inner {
     margin-top: 24px;
@@ -286,5 +295,23 @@
   }
   .buy-sell-flex {
     display: block;
+  }
+  .toast-successMesage-style {
+    position: absolute;
+    background-color: #393469;
+    align-items: center;
+    padding: 12px;
+    height: auto;
+    width: auto;
+    color: white;
+    border-radius: 12px;
+  }
+  .toast-outer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: Cinzel;
+    text-align: center;
+    align-items: baseline;
   }
 }
